Fix issue with body overlapping header

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,6 +29,8 @@
     top: 0;
     height: 120px;
     width: 100%;
+    background-color: white;
+    z-index: 1;
 }
 
 body {
